	supporting the POSIX call gettimeofday, and to clock-tick
	accuracy on Windows.

    o	read.table() gains a 'flush' argument passed to scan().

    o	fisher.test() now uses computed via hypergeometric distributions
	for all 2 by 2 tables.  This might the slightly slower for a
	few cases, but works much better for tables with some large
	counts.

    o	PCRE has been updated to version 6.4.

    o	getNativeSymbolInfo() is vectorized for the name argument.  It
	returns a named list of NativeSymbolInfo objects, but is
	backward compatabile by default when called with a character
	vector of length 1, returning the NativeSymbolInfo object.

    o	The method $.DLLInfo resolves the specified symbol in the DLL,
	returning a NativeSymbolInfo object.  Use [[ to access the actual
	values in the DLLInfo object.

    o	The useDynLib() directive in the NAMESPACE file now accepts the
	names of the native/foreign symbols that are to be resolved in
	the DLL for use in .C/.Call/.Fortran/.Externa calls.  These can
	be used as regular R variables instead of the (routine name,
	PACKAGE) pairs currently recommended.  Alternative names can
	be given for the R variables mapping to these symbols.  See
	Writing R Extensions manual for more details.


DEPRECATED & DEFUNCT

    o	The deprecated and undocumented use of atan() with two arguments
	has been removed: instead use atan2().

    o	write.table0() is defunct in favour of write.table().

    o	format.char() is defunct in favour of format.default().

    o	Support for the long-deprecated (and no longer documented)
	arguments --min-vsize --min-nsize --max-vsize --max-nsize
	--vsize --nsize of R CMD BATCH has been removed.

    o	The re-named tcltk functions tkcmd, tkfile.tail, tkfile.dir,
	tkopen, tkclose, tkputs, tkread are now formally deprecated.

    o	Argument 'col' of bxp() is now formally deprecated.

    o	The 'debian' subdirectory was removed from the sources.

    o	The 'vfont' argument of axis() and mtext() has been removed: