@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2001-4   The R Development Core Team.
+ *  Copyright (C) 2001-5   The R Development Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -33,6 +33,8 @@
 
 static R_NativePrimitiveArgType chisqsim_t[11] = {INTSXP,  INTSXP, INTSXP,  INTSXP, INTSXP, INTSXP,
                                                   REALSXP, INTSXP, REALSXP, INTSXP, REALSXP};
+static R_NativePrimitiveArgType fishersim_t[10] = {INTSXP, INTSXP, INTSXP,  INTSXP, INTSXP,
+                                                   INTSXP, INTSXP, REALSXP, INTSXP, REALSXP};
 static R_NativePrimitiveArgType d2_t[5] = {INTSXP, REALSXP, REALSXP, REALSXP, REALSXP};
 static R_NativePrimitiveArgType dansari_t[4] = {INTSXP, REALSXP, INTSXP, INTSXP};
 static R_NativePrimitiveArgType pansari_t[4] = {INTSXP, REALSXP, INTSXP, INTSXP};
@@ -68,6 +70,7 @@ static R_NativePrimitiveArgType band_den_bin_t[] = {INTSXP, INTSXP, REALSXP, REA
     }
 
 static const R_CMethodDef CEntries[] = {{"chisqsim", (DL_FUNC)&chisqsim, 11, chisqsim_t},
+                                        {"fisher_sim", (DL_FUNC)&fisher_sim, 10, fishersim_t},
                                         {"d2x2xk", (DL_FUNC)&d2x2xk, 5, d2_t},
                                         {"dansari", (DL_FUNC)&dansari, 4, dansari_t},
                                         {"fexact", (DL_FUNC)&fexact, 11, fexact_t},
